--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".BreedActivity" />
-        <activity android:name=".DogsActivity"></activity>
+        <activity android:name=".DogsActivity" />
+        <activity android:name=".PhotoActivity"></activity>
     </application>
 
 </manifest>
