--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     compile 'jp.wasabeef:picasso-transformations:2.1.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
 }
